# docs/api.yml
@@ -102,7 +102,6 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         500:
           $ref: '#/components/responses/Internal'
-  /accounts:
     post:
       summary: >-
         Creates account for a user
@@ -112,6 +111,8 @@ paths:
         - Bearer: []
       tags:
         - accounts
+      parameters:
+        - $ref: '#/components/parameters/userIdParam'
       responses:
         200:
           description: Ok
@@ -225,18 +226,21 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         500:
           $ref: '#/components/responses/Internal'
+  '/transactions/local':
     post:
-      summary: Create a transactions for a user
-      description: Only users with `userId` are allowed to create a transaction. The transaction will be put into queue. Once finished, callback will be executed.
+      summary: Create a transactions beetween accounts inside payments system
+      description: Only users with `userId` are allowed to create a transaction. The transaction will be executed immediately.
       security:
         - Bearer: []
       tags:
         - transactions
-      parameters:
-        - $ref: '#/components/parameters/userIdParam'
       responses:
-        204:
-          description: Transaction was put into queue
+        200:
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Transaction'
         400:
           $ref: '#/components/responses/BadRequest'
         401:
@@ -249,7 +253,65 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/TransactionCreateInput'
+              $ref: '#/components/schemas/TransactionLocalInput'
+  '/transactions/deposit':
+    post:
+      summary: Create a deposit transaction from blockchain to users account 
+      description: Only users with `userId` are allowed to create a transaction. The transaction will be executed immediately.
+      security:
+        - Bearer: []
+      tags:
+        - transactions
+      responses:
+        200:
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Transaction'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        422:
+          $ref: '#/components/responses/UnprocessableEntity'
+        500:
+          $ref: '#/components/responses/Internal'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TransactionDepositInput'
+  '/transactions/withdraw':
+    post:
+      summary: Create a withdraw transactions from users account to blockchain address 
+      description: Only users with `userId` are allowed to create a transaction. The transaction will be put into queue. Once finished, callback will be executed.
+      security:
+        - Bearer: []
+      tags:
+        - transactions
+      responses:
+        200:
+          description: Ok
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Transaction'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        422:
+          $ref: '#/components/responses/UnprocessableEntity'
+        500:
+          $ref: '#/components/responses/Internal'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TransactionWithDrawInput'
 
   '/users/{userId}/accounts/{accountId}/transactions':
     get:
@@ -293,6 +355,57 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         500:
           $ref: '#/components/responses/Internal'
+  '/transactions/{transactionId}':
+    get:
+      summary: Get transaction by id
+      description: Only users with `userId` are allowed to get a transaction.
+      security:
+        - Bearer: []
+      tags:
+        - transactions
+      parameters:
+        - $ref: '#/components/parameters/transactionIdParam'
+      responses:
+        200:
+          description: Ok
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Transaction'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        500:
+          $ref: '#/components/responses/Internal'
+  '/transactions/{transactionId}/status':
+    put:
+      summary: Change transaction status by transaction id
+      description: Only users with `userId` are allowed to update transaction status.
+      security:
+        - Bearer: []
+      tags:
+        - transactions
+      parameters:
+        - $ref: '#/components/parameters/transactionIdParam'
+      responses:
+        200:
+          description: Ok
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Transaction'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        500:
+          $ref: '#/components/responses/Internal'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TransactionStatusInput'
 
 components:
   responses:
@@ -354,8 +467,6 @@ components:
                 type: string
                 example: Internal server error
 
-
-
   schemas:
     ValidationErrors:
       type: array
@@ -410,43 +521,86 @@ components:
       format: uint256
       description: Monetary value - either fiat or blockchain
       example: 185000000000000000000
-    TransactionCreateInput:
+    BlockchainTxId:
+      type: string
+      description: Id of transaction in blockchain
+      example: fladksjflksadjfja3pfsjdkf
+    TransactionStatus:
+      type: string
+      description: Transaction status
+      example: fladksjflksadjfja3pfsjdkf
+      
+    TransactionLocalInput:
       type: object
       required:
-        - id
+        - userId
         - from
         - to
-        - toType
         - toCurrency
         - value
       properties:
-        id:
-          $ref: '#/components/schemas/Id'
+        userId:
+          $ref: '#/components/schemas/UserId'
         from:
-          $ref: '#/components/schemas/AccountAddress'
+          $ref: '#/components/schemas/AccountId'
         to:
-          description: >
-            Generally you make a transaction using blockchain address.
-            However, when working with obfuscated accounts you get back
-            only account id in our system (we need that to hide blockchain
-            address so that a user couldn't find it by phone)
-          oneOf:
-            - $ref: '#/components/schemas/AccountId'
-            - $ref: '#/components/schemas/AccountAddress'
-          discriminator:
-            propertyName: toType
-          example:
-            jghkdfgdjfgkdf7gd | 0x89595fa59d69d696d9d96
-        toType:
-          type: string
-          enum: [account|address]
+          $ref: '#/components/schemas/AccountId'
         toCurrency:
           $ref: '#/components/schemas/Currency'
         value:
           $ref: '#/components/schemas/Value'
         holdUntil:
           $ref: '#/components/schemas/Timestamp'
-
+    TransactionDepositInput:
+      type: object
+      required:
+        - userId
+        - address
+        - currency
+        - value
+        - blockchainTxId
+      properties:
+        userId:
+          $ref: '#/components/schemas/UserId'
+        address:
+          $ref: '#/components/schemas/AccountAddress'
+        currency:
+          $ref: '#/components/schemas/Currency'
+        value:
+          $ref: '#/components/schemas/Value'
+        blockchainTxId:
+          $ref: '#/components/schemas/BlockchainTxId'
+          
+    TransactionWithDrawInput:
+      type: object
+      required:
+        - userId
+        - fromAccountId
+        - toAddress
+        - currency
+        - value
+        - fee
+      properties:
+        userId:
+          $ref: '#/components/schemas/UserId'
+        fromAccountId:
+          $ref: '#/components/schemas/AccountId'
+        toAddress:
+          $ref: '#/components/schemas/AccountAddress'
+        currency:
+          $ref: '#/components/schemas/Currency'
+        value:
+          $ref: '#/components/schemas/Value'
+        fee:
+          $ref: '#/components/schemas/Value'
+          
+    TransactionStatusInput:
+      type: object
+      required:
+        - status
+      properties:
+        status:
+          $ref: '#/components/schemas/TransactionStatus'
     Transaction:
       type: object
       required:
