# src/api/mod.rs
@@ -99,12 +99,12 @@ impl Service for ApiService {
                         PUT /v1/accounts/{account_id: AccountId} => put_accounts,
                         DELETE /v1/accounts/{account_id: AccountId} => delete_accounts,
                         GET /v1/accounts/{account_id: AccountId}/balances => get_accounts_balances,
+                        GET /v1/accounts/{account_id: AccountId}/transactions => get_accounts_transactions,
                         GET /v1/users/{user_id: UserId}/balances => get_users_balances,
                         GET /v1/users/{user_id: UserId}/transactions => get_users_transactions,
                         POST /v1/transactions/local => post_transactions_local,
                         POST /v1/transactions/deposit => post_transactions_deposit,
                         POST /v1/transactions/withdraw => post_transactions_withdraw,
-                        GET /v1/accounts/{account_id: AccountId}/transactions => get_accounts_transactions,
                         GET /v1/transactions/{transaction_id: TransactionId} => get_transactions,
                         PUT /v1/transactions/{transaction_id: TransactionId}/status => put_transactions_status,
                         _ => not_found,
